# GeoQuant-MobileNet

./: .gitignore  LICENSE  Makefile  README.md  REPRODUCE.md  evaluate_pareto.py  main.py  pyproject.toml
configs/: base_config.yaml  config.yaml
configs/experiment/: baseline_fp32.yaml  ptq_static.yaml  qat_full.yaml
configs/quantization/: ptq.yaml  qat.yaml
data/: dataloaders.py  download_cub200.py  test_data_pipeline.py  transforms.py
data/scripts/: download_cifar10.py
docs/: references.md
notebooks/: 00_data_exploration.ipynb  01_embedding_baseline.ipynb  02_quantization_analysis.ipynb  03_geometric_evaluation.ipynb  04_metrics_test.ipynb
scripts/: benchmark.py  evaluate.py  quantize.py  stress_benchmark.py  train.py
src/: EDA.py  benchmark_latency.py  cifar10_train.py  plot_latent_space.py  train.py  train_arcface.py
src/data/: README.md  cifar10_dataloaders.py  dataloaders.py  dataset.py
src/eda_results/: cifar10_estadisticas.json  imagenette_stats.json
src/geoquant/: __init__.py
src/geoquant/data/: __init__.py  dataset.py  dummy_generator.py  samplers.py  transforms.py
src/geoquant/evaluation/: __init__.py  block_a.py  block_b.py  block_c.py  block_d.py  block_e.py  embeddings.py  flops_counter.py  latency.py  memory_profiler.py  reporter.py  suite.py
src/geoquant/models/: __init__.py  arcface.py  backbone.py
src/geoquant/quantization/: __init__.py  export.py  ptq.py  qat.py
src/geoquant/training/: trainer.py
src/geoquant/utils/: __init__.py  logging.py  reproducibility.py
src/models/: arcface.py  factory.py
src/quantization/: configurations.py  engine.py
src/topology/: hooks.py  metrics.py
src/utils/: benchmark.py  logger.py
tests/: conftest.py  test_data.py
tests/unit/: test_metrics.py  test_quantization.py
