[project]
name = "facequant-biometric-robustness"
version = "0.1.0"
description = "Biometric robustness research project"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
    "insightface>=0.7.3",
    "opencv-python-headless>=4.8.0",
    "onnx>=1.14.0",
    "onnxruntime>=1.15.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "requests>=2.28.0",
    "gdown>=4.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"