[project]
name = "facequant-biometric-robustness"
version = "0.1.0"
description = "Evaluación multiobjetivo 3D de cuantización INT8 y topología de espacios latentes"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "pyyaml",
    "tqdm",
    "dvc",
    "dvc-gdrive",
]
